--- a/index.html
+++ b/index.html
@@ -49,13 +49,6 @@
     <div class="experience">
       <h2>RELEVANT EXPERIENCE</h2>
       <ul class="no-bullets">
-        <li style="font-size: larger;">QuickStart | Remote</li>
-        <li><span style="font-weight: bold;">Full Stack Developer Development</span>, January 2025 - July 2025</li>
-        <ul>
-          <li>Apprenticeship in hands-on bootcamp</li>
-          <li>Developed applications using Java, JavaScript, HTML, CSS, Spring Boot, Rest API, and more</li>
-        </ul>
-        <br>
         <li style="font-size: larger;">Burgener Art | Idaho Falls, ID</li>
         <li><span style="font-weight: bold;">Owner</span>, 2015 - Current</li>
         <ul>
@@ -101,27 +94,30 @@
           <div class="col-12 col-lg-6 border-2 border-start border-end">
             <div class="fw-bold text-center">Colleges/Universities</div>
             <ul class="no-bullets">
-              <li class="colleges">Brigham Young University-Provo | Provo, UT</li>
-              <li><span class="degrees">B.S. in Chemical Engineering</span></li>
+              <li class="colleges">College of Eastern Idaho / Promineo Tech / QuickStart | Remote <br> Jan. 2025 - June 2025</li>
+              <li class="degrees">Certificate in Back-End Software Development </li>
               <ul>
-                <li>Research Assistant of the Year Award</li>
+                <li><a href="https://drive.google.com/file/d/1sA70zY1tD87pD7EcFYERhWkPab2eHV6K/view">Completed Feb. 2025</a></li>
+                <li><a href="https://tools.promineotech.com/student_certs/9ccbe9ba_bradylbsee.pdf">Certificate</a></li>
+                <li>Developed applications using Java, Spring Boot, Rest API, and more</li>
+              </ul>
+              <li class="degrees">Certificate in Front-End Software Development </li>
+              <ul>
+                <li>Anticipated Completion Date June 2025</li>
+                <li>Developed applications using JavaScript, HTML, CSS, React, and more</li>
               </ul>
               <br>
               <li class="colleges">Western Governors University | Remote <br> July 2024 - Jan. 2025</li>
               <li class="degrees">Certificate in Front-End Development </li>
               <ul>
                 <li><a href="https://www.credly.com/badges/e793a0a2-7978-49ea-9020-33ed76ccb16a/public_url">Certificate Link</a></li>
+                <li>Developed applications using JavaScript, HTML, CSS, Angular, and more</li>
               </ul>
               <br>
-              <li class="colleges">College of Eastern Idaho / Promineo Tech / QuickStart | Remote <br> Jan. 2025 - May 2025</li>
-              <li class="degrees">Certificate in Back-End Software Development </li>
+              <li class="colleges">Brigham Young University-Provo | Provo, UT</li>
+              <li><span class="degrees">B.S. in Chemical Engineering</span></li>
               <ul>
-                <li><a href="https://drive.google.com/file/d/1sA70zY1tD87pD7EcFYERhWkPab2eHV6K/view">Completed Feb. 2025</a></li>
-                <li><a href="https://tools.promineotech.com/student_certs/9ccbe9ba_bradylbsee.pdf">Certificate</a></li>
-              </ul>
-              <li class="degrees">Certificate in Front-End Software Development </li>
-              <ul>
-                <li>Anticipated Completion Date May 2025</li>
+                <li>Research Assistant of the Year Award</li>
               </ul>
             </ul>
           </div>
